# mvideo

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  TODO.md  main.py  package.json  turbo.json
.github/workflows/: deploy-web-gh-pages.yml
apps/web/: .env.example  drizzle.config.ts  next.config.ts  package.json
apps/web/public/: manifest.json
apps/web/src/app/: metadata.ts  robots.ts  sitemap.ts
apps/web/src/components/: footer.tsx  header.tsx
apps/web/src/constants/: site-constants.ts  timeline-constants.tsx
apps/web/src/lib/: rate-limit.ts
apps/web/src/stores/: keybindings-store.ts
bilibili/: .gitignore  REPLAN.md  TODO.md  next.config.js  package.json
bilibili/src/app/: page.tsx
bilibili/src/components/: Button.tsx
bilibili/src/components/studio/: ExtensionsPanel.tsx  InspectorPanel.tsx  KeymapModal.tsx  NewProjectModal.tsx  PreviewPlayer.tsx  (+6 more)
bilibili/src/helpers/: logger.ts
bilibili/src/hooks/: useResolvedCompositionProps.ts  useStudioKeyboardShortcuts.ts
bilibili/src/plugins/: index.ts
bilibili/src/remotion/: MainComposition.tsx  Root.tsx  composition-registry.ts  preview-config.ts
bilibili/src/server/: asset-store.ts  ffmpeg.ts  ingestion.ts
bilibili/src/services/: export-store.ts  plugins.ts  project-serialization.ts  project-store.ts  resolve-composition-props.ts  ui-store.ts
bilibili/src/store/: useProjectStore.ts
bilibili/src/types/: index.ts
bilibili/styles/: global.css
bilibili/types/: constants.ts  models.ts  plugin.ts
include/: MainWindow.h  Timeline.h
src/: MainWindow.cpp  Timeline.cpp  main.cpp
(+45 files in other folders)
